<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context="app.tninis.wiegand.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/CN"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rect_edit_view_text"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FC"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rect_edit_view_text"
        android:ems="10"
        android:hint="@string/facility_code"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CN" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_calc"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FC" />

    <TextView
        android:id="@+id/tv_hex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/txt_Hex"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/dec_result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/txt_Dec"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hex_result"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hex_result"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textIsSelectable="true"
        android:textSize="24sp"
        android:background="@drawable/rect_edit_view_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_hex"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc" />

    <TextView
        android:id="@+id/dec_result"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rect_edit_view_text"
        android:textIsSelectable="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dec"
        app:layout_constraintTop_toBottomOf="@+id/hex_result" />



</android.support.constraint.ConstraintLayout>
